完善视频模块缩放位置点选播放

--- a/module_video/src/main/res/layouts/adapters/layout/video_play_item.xml
+++ b/module_video/src/main/res/layouts/adapters/layout/video_play_item.xml
@@ -13,6 +13,12 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
+
+    <com.knight.kotlin.module_video.view.LikeView
+        android:id="@+id/video_likeview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <com.knight.kotlin.module_video.view.ControllerView
         android:id="@+id/controller"
         android:layout_width="match_parent"
