完善段子视频列表模块

--- a/module_video/src/main/res/layouts/activitys/layout/video_play_list_activity.xml
+++ b/module_video/src/main/res/layouts/activitys/layout/video_play_list_activity.xml
@@ -3,17 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent">
+
+
+
 
 
     <FrameLayout
         android:id="@+id/video_framelayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
 
     </FrameLayout>
+
+
+    <include
+        android:id="@+id/include_video_toolbar"
+        layout="@layout/base_include_toolbar"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
