--- a/module_video/src/main/res/layouts/activitys/layout/video_playview.xml
+++ b/module_video/src/main/res/layouts/activitys/layout/video_playview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,5 +10,6 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/playerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:resize_mode="zoom"/>
 </FrameLayout>
