--- a/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
 
-    <include
-        android:id="@+id/home_include_toolbar"
-        layout="@layout/home_include_toolbar" />
+
 
     <RelativeLayout
         android:id="@+id/home_rl_magicindicator"
         android:layout_width="match_parent"
         android:layout_height="@dimen/home_magic_height"
-        android:background="@color/home_magicindicator">
+        android:background="@color/home_magicindicator"
+        android:visibility="gone">
 
 
         <net.lucode.hackware.magicindicator.MagicIndicator
@@ -23,7 +22,8 @@
             android:layout_height="@dimen/home_magic_height"
             android:layout_marginRight="@dimen/home_magicindicator_marginright"
             android:layout_toLeftOf="@+id/home_iv_labelmore"
-            android:minHeight="@dimen/home_magic_height" />
+            android:minHeight="@dimen/home_magic_height"
+            />
 
 
         <ImageView
@@ -33,16 +33,30 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/home_label_margin_right"
-            android:background="@drawable/home_icon_flagmore"/>
+            android:background="@drawable/home_icon_flagmore"
+            />
 
 
     </RelativeLayout>
 
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
+         <androidx.viewpager2.widget.ViewPager2
+             android:id="@+id/view_pager"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:overScrollMode="never"
+             android:orientation="vertical"
+             />
+
+
+
+
+
+
+    <!-- 自定义动画头部 -->
+    <com.knight.kotlin.module_home.view.ExpendPointView
+        android:id="@+id/headerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"/>
 
-
-</LinearLayout>
+</FrameLayout>
