--- a/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
@@ -1,67 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/home_cl_recommend_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-
+    <include
+        android:id="@+id/home_include_toolbar"
+        layout="@layout/home_include_toolbar"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
         <RelativeLayout
             android:id="@+id/rl_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/home_include_toolbar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
-            <com.scwang.smart.refresh.layout.SmartRefreshLayout
-                android:id="@+id/recommend_refreshLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
 
-                <com.scwang.smart.refresh.header.TwoLevelHeader
-                    android:id="@+id/home_twoLevelHeader"
+
+                <com.scwang.smart.refresh.layout.SmartRefreshLayout
+                    android:id="@+id/recommend_refreshLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
 
-                    <LinearLayout
-                        android:id="@+id/home_twoLevel_content"
+                    <com.scwang.smart.refresh.header.TwoLevelHeader
+                        android:id="@+id/home_twoLevelHeader"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:alpha="0"
-                        android:orientation="vertical">
+                        android:layout_height="wrap_content">
 
-                        <com.yanzhenjie.recyclerview.SwipeRecyclerView
-                            android:id="@+id/second_openframe_rv"
+
+                        <LinearLayout
+                            android:id="@+id/home_twoLevel_content"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/home_second_level_margin_bottom" />
+                            android:layout_height="match_parent"
+                            android:alpha="0"
+                            android:orientation="vertical">
+
+                            <com.yanzhenjie.recyclerview.SwipeRecyclerView
+                                android:id="@+id/second_openframe_rv"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/home_second_level_margin_bottom" />
 
 
-                    </LinearLayout>
+                        </LinearLayout>
 
-                    <com.scwang.smart.refresh.header.ClassicsHeader
+                        <com.scwang.smart.refresh.header.ClassicsHeader
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                    </com.scwang.smart.refresh.header.TwoLevelHeader>
+                    <!-- Viewpager2嵌套Recycleview解决滑动冲突 -->
+                    <com.knight.kotlin.module_home.view.NestedScrollableHost
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <com.yanzhenjie.recyclerview.SwipeRecyclerView
+                            android:id="@+id/home_recommend_article_body"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                    </com.knight.kotlin.module_home.view.NestedScrollableHost>
+
+
+                    <com.scwang.smart.refresh.footer.ClassicsFooter
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
-                </com.scwang.smart.refresh.header.TwoLevelHeader>
+                </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
 
-                <com.yanzhenjie.recyclerview.SwipeRecyclerView
-                    android:id="@+id/home_recommend_article_body"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
 
-                <com.scwang.smart.refresh.footer.ClassicsFooter
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-            </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
 
 
@@ -156,11 +171,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="home_icon_scroll_up"/>
-
-
-
-
-
 
 
 
