--- a/module_main/src/main/res/layouts/activitys/layout/main_activity.xml
+++ b/module_main/src/main/res/layouts/activitys/layout/main_activity.xml
@@ -10,7 +10,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <com.yh.bottomnavigationex.BottomNavigationViewEx
         android:id="@+id/btn_nav"
