--- a/module_square/src/main/res/layouts/fragments/layout/square_fragment.xml
+++ b/module_square/src/main/res/layouts/fragments/layout/square_fragment.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <com.knight.kotlin.library_widget.CompatToolBar
             android:id="@+id/square_toolbar"
@@ -80,96 +80,49 @@
         </com.knight.kotlin.library_widget.CompatToolBar>
 
 
-        <com.scwang.smart.refresh.layout.SmartRefreshLayout
-            android:id="@+id/square_sharearticle_freshlayout"
+
+
+        <RelativeLayout
+            android:id="@+id/square_rl_magicindicator"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/square_magic_height"
+            android:background="@color/square_magicindicator"
+            app:layout_constraintTop_toBottomOf="@id/square_toolbar"
+            >
+
+
+            <net.lucode.hackware.magicindicator.MagicIndicator
+                android:id="@+id/magic_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/square_magic_height"
+                android:layout_marginRight="@dimen/square_magicindicator_margin_right"
+                android:layout_toLeftOf="@+id/square_iv_labelmore"
+                android:minHeight="@dimen/square_magic_height"
+                />
+
+
+            <ImageView
+                android:id="@+id/square_iv_labelmore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/square_label_margin_right"
+                android:background="@drawable/square_icon_flagmore"
+                />
+
+
+        </RelativeLayout>
+
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/square_article_vp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/square_toolbar">
+            app:layout_constraintTop_toBottomOf="@id/square_rl_magicindicator"
 
-            <com.scwang.smart.refresh.header.ClassicsHeader
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <com.knight.kotlin.library_widget.StickyScrollView
-                android:id="@+id/square_nestedsv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fillViewport="true"
-                android:scrollbars="none">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/square_tv_everysearch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/square_tv_everysearch_margin_left"
-                        android:layout_marginTop="@dimen/square_tv_everysearch_margin_top"
-                        android:text="@string/square_every_one_search"
-                        android:textColor="@color/square_tv_everysearch_color"
-                        android:textSize="@dimen/square_tv_everysearch_text_size" />
-
-                    <com.yanzhenjie.recyclerview.SwipeRecyclerView
-                        android:id="@+id/square_searchhot_rv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/square_searchhot_rv_margin_left"
-                        android:layout_marginTop="@dimen/square_searchhot_rv_margin_top"
-                        android:layout_marginRight="@dimen/square_searchhot_rv_margin_right" />
-
-                    <TextView
-                        android:id="@+id/square_tv_new_share"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/square_tv_new_share_margin_left"
-                        android:text="@string/square_new_sharearticle"
-                        android:textColor="@color/square_tv_new_share_text_color"
-                        android:textSize="@dimen/square_tv_new_share_text_size" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/square_view_bottom_height"
-                        android:layout_marginTop="@dimen/square_view_bottom_margin_top"
-                        android:background="@color/base_item_bottom_view" />
-
-                    <com.yanzhenjie.recyclerview.SwipeRecyclerView
-                        android:id="@+id/square_article_rv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-
-
-            </com.knight.kotlin.library_widget.StickyScrollView>
-
-            <com.scwang.smart.refresh.footer.ClassicsFooter
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-
-        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
-
-
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/square_fab_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/square_fab_up_margin_right"
-        android:layout_marginBottom="@dimen/square_fab_up_margin_bottom"
-        android:src="@drawable/base_icon_up"
-        app:backgroundTint="@color/base_color_theme" />
-
-
 
 </FrameLayout>
