--- a/module_square/src/main/res/values-night/colors.xml
+++ b/module_square/src/main/res/values-night/colors.xml
@@ -12,4 +12,8 @@
     <color name="square_tv_articletitle_color">#D3D3D3</color>
     <color name="square_sharearticle_et_color">#D3D3D3</color>
     <color name="square_tv_article_link_color">#D3D3D3</color>
+    <color name="square_magicindicator">#303030</color>
+    <color name="square_bg_item_article">#303030</color>
+    <color name="square_tv_article_title_color">#D3D3D3</color>
+    <color name="square_item_article_bottom_color">#000000</color>
 </resources>
