--- a/module_square/src/main/res/values/dimens.xml
+++ b/module_square/src/main/res/values/dimens.xml
@@ -75,4 +75,31 @@
     <dimen name="square_question_tv_title_text_size">18sp</dimen>
     <dimen name="square_iv_question_margin_left">16dp</dimen>
     <dimen name="square_tv_tipshare_margin_left">16dp</dimen>
+    <dimen name="square_magic_height">50dp</dimen>
+    <dimen name="square_magicindicator_margin_right">6dp</dimen>
+    <dimen name="square_label_margin_right">8dp</dimen>
+    <dimen name="square_item_article_author_margin_left">16dp</dimen>
+    <dimen name="square_item_article_author_margin_top">16dp</dimen>
+    <dimen name="square_item_article_author_padding_right">8dp</dimen>
+    <dimen name="square_item_article_author_text_size">12sp</dimen>
+    <dimen name="square_item_article_new_flag_margin_right">8dp</dimen>
+    <dimen name="square_item_article_new_flag_text_size">12sp</dimen>
+    <dimen name="square_item_article_chaptername_margin_right">8dp</dimen>
+    <dimen name="square_item_article_chapter_name_padding_left">4dp</dimen>
+    <dimen name="square_item_article_chapter_name_padding_top">2dp</dimen>
+    <dimen name="square_item_article_chapter_name_padding_right">4dp</dimen>
+    <dimen name="square_item_article_chapter_name_padding_bottom">2dp</dimen>
+    <dimen name="square_item_article_chaptername_text_size">12sp</dimen>
+    <dimen name="square_icon_collect_margin_right">8dp</dimen>
+    <dimen name="square_tv_article_title_margin_left">16dp</dimen>
+    <dimen name="square_tv_article_title_margin_top">10dp</dimen>
+    <dimen name="square_tv_articlet_itle_margin_right">16dp</dimen>
+    <dimen name="square_tv_article_title_text_size">16sp</dimen>
+    <dimen name="square_tv_articledesc_margin_top">10dp</dimen>
+    <dimen name="square_tv_articledesc_text_size">12sp</dimen>
+    <dimen name="square_article_data_margin_top">10dp</dimen>
+    <dimen name="square_article_data_margin_right">8dp</dimen>
+    <dimen name="square_article_data_margin_bottom">16dp</dimen>
+    <dimen name="square_article_data_text_size">12sp</dimen>
+    <dimen name="square_article_bottom_view_height">8dp</dimen>
 </resources>
