--- a/module_mine/src/main/res/values-night/colors.xml
+++ b/module_mine/src/main/res/values-night/colors.xml
@@ -30,4 +30,6 @@
     <color name="mine_tv_rule_detail_point_text_color">#D3D3D3</color>
     <color name="mine_sharearticle_item_bg_color">#303030</color>
     <color name="mine_tv_share_articletitle_text_color">#D3D3D3</color>
+    <color name="mine_opensource_abroadlink_label">#D3D3D3</color>
+    <color name="mine_opensource_desc">#D3D3D3</color>
 </resources>
