--- a/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
@@ -13,7 +13,7 @@
          <androidx.viewpager2.widget.ViewPager2
              android:id="@+id/view_pager"
              android:layout_width="match_parent"
-             android:layout_height="wrap_content"
+             android:layout_height="match_parent"
              android:overScrollMode="never"
              android:orientation="vertical"
              />
@@ -27,6 +27,7 @@
     <com.knight.kotlin.module_home.view.ExpendPointView
         android:id="@+id/headerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        />
 
 </FrameLayout>
