--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -205,4 +205,17 @@
      <dimen name="home_icon_utils_margin_end">32dp</dimen>
      <dimen name="home_icon_scroll_up_margin_bottom">32dp</dimen>
      <dimen name="home_icon_scroll_up_margin_end">32dp</dimen>
+     <dimen name="home_eyepetizer_title_text_size">20sp</dimen>
+     <dimen name="home_eyepetizer_title_margin_top">25dp</dimen>
+     <dimen name="home_eyepetizer_category_text_size">18sp</dimen>
+     <dimen name="home_eyepetizer_category_margin_top">10dp</dimen>
+     <dimen name="home_eyepetizer_category_margin_left">16dp</dimen>
+     <dimen name="home_rv_eyepetizer_category_margin_left">16dp</dimen>
+     <dimen name="home_rv_eyepetizer_category_margin_right">16dp</dimen>
+     <dimen name="home_rv_eyepetizer_category_margin_top">10dp</dimen>
+     <dimen name="home_cl_eyepetizer_category_item_height">120dp</dimen>
+     <dimen name="home_cl_eyepetizer_category_item_margin_bottom">10dp</dimen>
+     <dimen name="home_tv_eyepetizer_category_item_title_text_size">24sp</dimen>
+     <dimen name="home_tv_eyepetizer_category_item_desc_text_size">16sp</dimen>
+     <dimen name="home_tv_eyepetizer_category_item_desc_margin_top">10dp</dimen>
 </resources>
