--- a/module_home/src/main/res/layouts/adapters/layout/home_eyepetizer_category.xml
+++ b/module_home/src/main/res/layouts/adapters/layout/home_eyepetizer_category.xml
@@ -1,44 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_eyepetizer_category_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/home_cl_eyepetizer_category_item_height"
-    android:layout_marginBottom="@dimen/home_cl_eyepetizer_category_item_margin_bottom"
+    android:layout_marginBottom="@dimen/home_cl_eyepetizer_category_item_margin_bottom">
 
-    >
-
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_eyepetizer_category_item_title"
-            android:layout_width="wrap_content"
+
+        <ImageView
+            android:id="@+id/iv_eyepetizer_category"
+            android:layout_width="@dimen/home_iv_eyepetizer_category_height"
+            android:layout_height="@dimen/home_iv_eyepetizer_category_width"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/home_iv_eyepetizer_category_margin_left" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/home_tv_eyepetizer_category_item_title_text_size"
-            android:textColor="@android:color/white"
-            />
+            android:layout_marginLeft="@dimen/home_ll_eyepetizer_category_margin_left"
+            android:layout_toRightOf="@id/iv_eyepetizer_category"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_eyepetizer_category_item_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/home_tv_eyepetizer_category_item_desc_text_size"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="@dimen/home_tv_eyepetizer_category_item_desc_margin_top"
-            />
+            <TextView
+                android:id="@+id/tv_eyepetizer_category_item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/home_tv_eyepetizer_category_item_title_text_size" />
+
+            <TextView
+                android:id="@+id/tv_eyepetizer_category_item_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/home_tv_eyepetizer_category_item_desc_margin_top"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/home_tv_eyepetizer_category_item_desc_text_size" />
 
 
-    </LinearLayout>
+        </LinearLayout>
 
+
+    </RelativeLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
