--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -218,4 +218,9 @@
      <dimen name="home_tv_eyepetizer_category_item_title_text_size">24sp</dimen>
      <dimen name="home_tv_eyepetizer_category_item_desc_text_size">16sp</dimen>
      <dimen name="home_tv_eyepetizer_category_item_desc_margin_top">10dp</dimen>
+     <dimen name="home_iv_eyepetizer_category_margin_left">15dp</dimen>
+     <dimen name="home_ll_eyepetizer_category_margin_left">20dp</dimen>
+     <dimen name="home_iv_eyepetizer_category_height">40dp</dimen>
+     <dimen name="home_iv_eyepetizer_category_width">40dp</dimen>
+
 </resources>
