--- a/module_main/src/main/res/anim/main_bottombar_hide_anim.xml
+++ b/module_main/src/main/res/anim/main_bottombar_hide_anim.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--bottombar_dismississ.xml-->
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true"
+    >
     <translate
         android:duration="300"
         android:fromYDelta="100.0%p"
         android:toYDelta="0.0"
+        android:fillAfter="false"
         />
 <!--    <alpha-->
 <!--        android:fromAlpha="1.0"-->
