--- a/module_main/src/main/res/anim/main_bottombar_show_anim.xml
+++ b/module_main/src/main/res/anim/main_bottombar_show_anim.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--bottombar_show.xmlxml-->
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true"
+    >
     <translate
         android:duration="300"
         android:fromYDelta="0.0"
