--- a/module_eye_daily/src/main/res/values/colors.xml
+++ b/module_eye_daily/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="eye_daily_teal_700">#FF018786</color>
     <color name="eye_daily_black">#FF000000</color>
     <color name="eye_daily_white">#FFFFFFFF</color>
-    <color name="eye_daily_banner_normal_color">#3DFFFFFF</color>
+    <color name="eye_daily_banner_normal_color">#D1D1D1</color>
+    <color name="eye_daily_banner_indicator_bg">#33FFFFFF</color>
 </resources>
